# MediaPlayground

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/billding/mediaplayground/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/player/: FFmpegPlayer.cpp  FFmpegPlayer.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  Decoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/audio/: AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoRender.h
app/src/main/cpp/utils/: LogUtil.h
app/src/main/java/com/billding/mediaplayground/: MainActivity.kt  TextureSurfaceActivity.kt
app/src/main/java/com/billding/mediaplayground/activity/: AudioRecordActivity.kt  MainActivity.kt  MediaGalleryActivity.kt  TextureSurfaceActivity.kt
app/src/main/java/com/billding/mediaplayground/player/: FFmpegPlayer.kt  IMediaPlayer.kt  IPlayerStateChangeListener.kt
app/src/main/java/com/billding/mediaplayground/recorder/: MpFrame.kt  MpFrameType.kt
app/src/main/java/com/billding/mediaplayground/recorder/audio/: MPAudioCaptureConfig.kt  MpAudioCaptureListener.kt  MpAudioFrame.kt  MpAudioRecorder.kt
app/src/main/res/layout/: activity_main.xml  activity_surface_a_layout.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/billding/mediaplayground/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
